# HostClipboard

./: .gitignore  README.md  README_en.md
.github/workflows/: build.yml
client/: README.md
client/electron/: clipboardHelper.js  main.js  nodemon.json  package-lock.json  package.json  preload.js
client/electron/pages/: index.html  render.js  styles.css
client/electron/tools/: prompt.py
client/rs_macos/: Cargo.toml  README.md
client/rs_macos/src/: main.rs
client/rs_macos/src/core/: mod.rs  pasteboard.rs  pasteboard_content.rs  safe_objc_ptr.rs
client/supercv-vue/: package.json
client/supercv-vue/src/: App.vue  clipboardHelper.ts  main.ts
client/supercv-vue/src-tauri/: Cargo.toml  tauri.conf.json
client/supercv-vue/src-tauri/src/: clipboard_helper.rs  main.rs
client/supercv-vue/src/views/: Main.vue
client/tauri/supercv-vue/: package.json
core/rs_core/: Cargo.toml  index.d.ts  index.js  package.json  test.db  test.js
core/rs_core/npm/darwin-x64/: README.md  package.json
core/rs_core/npm/linux-x64-gnu/: README.md  package.json
core/rs_core/npm/win32-x64-msvc/: README.md  package.json
core/rs_core/src/: lib.rs  main.rs
core/rs_core/src/apis/: mod.rs  pasteboard.rs  safe_objc_ptr.rs
core/rs_core/src/db/: connection.rs
core/rs_core/src/db/crud/: host_clipboard.rs
core/rs_core/src/db/entities/: host_clipboard.rs  prelude.rs
core/rs_core/src/schema/: clipboard.rs
core/rs_core/src/search_engine/: index_core.rs  indexer.rs  mod.rs
core/rs_core/src/utils/: config.rs  file.rs  logger.rs  mod.rs  time.rs
(+34 files in other folders)
