[package]
edition = "2021"
name = "hello"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = [
    "napi4",
    "async",
] }
napi-derive = "2.12.2"
sea-orm = { version = "0.12", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
migration = { path = "migration" }
sea-orm-migration = "0.12.15"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
dirs = "5.0"
uuid = { version = "1.10.0", features = [
    "v4",
    "fast-rng", # Use a faster (but still sufficiently random) RNG
] }
base62 = "2.0"
fltk = "^1.4"
cocoa = "0.25.0"
core-graphics = "0.23.2"
objc = "0.2.3"
crossbeam = "0.8"
unicode-segmentation = "1.7"
once_cell = "1.8.0"
url = "2.5.2"


[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
